@@ -56,6 +56,8 @@
 * Fixed Scene::RemoveUnusedMeshes()
 * Fixed a bug in Mix material when working with specular materials (issue #187)
 * Fixed an overflow problem when using an heterogenous volume on very large segments
+* Sun relative size has now a lower bound of 1.0 to avoid numerical precision problems
+* Fixed a problem with Scene::ToProperties() after editing a scene
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
